--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ logo:
   desktop_height: "36px"
 
 footer:
-  copyright_text: 'Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+  copyright_text: 'Based on a Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
 
 seo:
   meta_og_title: "Synergy HR Consulting Group"
