--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,9 @@ sass:
 plugins:
   - jekyll-environment-variables
 
+kramdown:
+  parse_html_block: true
+  
 exclude:
   - Gemfile
   - Gemfile.lock
